# recipe-insights

./: .gitignore  .pre-commit-config.yaml  .test.env  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_parse_actions.py
.claude/: settings.json  settings.local.json
.github/workflows/: hf-sync.yml  pr.yml
data/: claudes-lasagne.md  claudes-omelette.md
docs/: project-document.md
src/: main.py
src/recipe_board/: gradio_ui.py  main.py
src/recipe_board/agents/: entity_workflow.py  graph_tools.py  models.py  parsing_agent.py  recipe_analyzer.py  recipe_parser.py  tools.py
src/recipe_board/agents/prompts/: __init__.py
src/recipe_board/core/: logging_utils.py  recipe.py  sample_recipes.py  state.py
src/recipe_board/ui/: how_to_tab.py
test/: conftest.py  test_graph_integration.py  test_graph_tools.py  test_json_extraction.py  test_models.py  test_parse_actions.py  test_prompts.py  test_recipe_analyzer.py  test_recipe_parser.py  test_sample_recipes.py  test_state.py  test_tools.py  test_ui_smoke.py
