[project]
name = "recipe-board"
version = "0.1.0"
description = "Help hobbyist chefs discover and better understand the implicit dependencies in recipes they’d like to cook or bake"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-lg",
    "gradio>=5.0.0",
    "huggingface-hub>=0.32.4",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "smolagents>=1.17.0",
    "spacy>=3.8.7",
    "wasabi>=1.1.3",
]

[project.scripts]
recipe-board = "main:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.1.1",
    "pytest-dotenv>=0.5.2",
]

[tool.uv]
package = true

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
